# server-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  SERVER-SETUP.md
src/: backup.rs  backup_utils.rs  child.rs  cmd_utils.rs  config.rs  mail.rs  main.rs  rcon.rs  server.rs
